# genify

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  about.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/: error.rs  generation.rs  lib.rs  main.rs  mcp.rs  schema.rs  tera_filters.rs  toml.rs
tests/: mcp_stdio.rs
