[package]
name = "genify"
version = "0.0.2"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
edition = "2021"
description = "Turn one file into a complete project"
repository = "https://github.com/daxartio/genify"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.39", features = ["derive"], optional = true }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], optional = true }
url = { version = "2", optional = true }

convert_case = "0.8.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_regex = "1.1.0"
tera = "1.20.0"
toml = { version = "0.8.22", features = ["preserve_order"] }

[features]
cli = ["dep:clap", "dep:reqwest", "dep:url"]

[[bin]]
name = "genify"
path = "src/main.rs"
required-features = ["cli"]
