[package]
name = "genify"
version = "0.0.3"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
edition = "2024"
description = "Turn one file into a complete project"
repository = "https://github.com/daxartio/genify"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], optional = true }
url = { version = "2", optional = true }

convert_case = "0.10.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1.0"
serde_json = "1.0"
similar = "2.7"
tera = "1.20"
thiserror = "2.0"
rmcp = { version = "1.6.0", default-features = false, features = ["server", "transport-io"] }
tokio = { version = "1.48", features = ["io-std", "rt"] }
toml = { version = "0.9", features = ["preserve_order"] }

[features]
cli = ["dep:clap", "dep:reqwest", "dep:url"]

[[bin]]
name = "genify"
path = "src/main.rs"
required-features = ["cli"]
